Add Google auths in the backend for register and login